ECampus.Services.Auth/K8S/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
        - name: authservice
          imagePullPolicy: Never
          image: voonya/auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: authservice
  ports:
  - name: authservice
    protocol: TCP
    port: 80
    targetPort: 80
